common/infrastructure/kgateway/extensions/internal/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kgateway-gateway-internal
  annotations:
    external-dns.kubernetes.io/provider: internal
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: kgateway-gateway-internal-service-parameters
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: http-80
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-443
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
